--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,22 +10,22 @@
   },
   "workbench.colorCustomizations": {
     "commandCenter.border": "#e7e7e799",
-    "sash.hoverBorder": "#24344e",
-    "statusBar.background": "#141d2b",
+    "sash.hoverBorder": "#58a5b0",
+    "statusBar.background": "#448791",
     "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#24344e",
-    "statusBarItem.remoteBackground": "#141d2b",
+    "statusBarItem.hoverBackground": "#58a5b0",
+    "statusBarItem.remoteBackground": "#448791",
     "statusBarItem.remoteForeground": "#e7e7e7",
-    "titleBar.activeBackground": "#141d2b",
+    "titleBar.activeBackground": "#448791",
     "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#141d2b99",
+    "titleBar.inactiveBackground": "#44879199",
     "titleBar.inactiveForeground": "#e7e7e799",
-    "activityBar.activeBackground": "#24344e",
-    "activityBar.background": "#24344e",
-    "activityBar.foreground": "#e7e7e7",
-    "activityBar.inactiveForeground": "#e7e7e799",
-    "activityBarBadge.background": "#994666",
-    "activityBarBadge.foreground": "#e7e7e7"
+    "activityBar.activeBackground": "#58a5b0",
+    "activityBar.background": "#58a5b0",
+    "activityBar.foreground": "#15202b",
+    "activityBar.inactiveForeground": "#15202b99",
+    "activityBarBadge.background": "#ebd4e8",
+    "activityBarBadge.foreground": "#15202b"
   },
-  "peacock.color": "#141d2b",
+  "peacock.color": "#448791",
 }
